--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
 
             <input type="text" placeholder="Add New Todo">
 
-            <ul>
-                <li><span><i class="fa fa-trash-o"></i></span> Clean dishes</li>
-                <li><span><i class="fa fa-trash-o"></i></span> Buy dog food</li>
-                <li><span><i class="fa fa-trash-o"></i></span> Visit Hangrid</li>
+            <ul id="todoList">
             </ul>
         </div>
     </body>
